--- a/Assignment3/src/index.html
+++ b/Assignment3/src/index.html
@@ -10,7 +10,7 @@
             }
             </style>
     </head>
-    <body style="margin: 10%;">
+    <body style="margin: 10%; margin-top: 5%; margin-bottom: 5%;">
         <div>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -24,7 +24,24 @@
                 nostrud exercitation uliamco laboris nisiut aliquip ex ea commode consequat.
                 Duis aute irure dolor in reprehenderit in voluptate velit esse cilium dolore eu fugiat nulia pariatur.
                 Excepteur sint occaecat cupidatat non proident,sunt in culpa quioff icia deserunt moliit anim id est laborum.
-            </p>
+            </p><br>
         </div>
+        <div>
+            <ul style="font-size: 90%;">
+                <li>Lorem ipsum dolor sit amet,consectetur adipiscing elit.</li><br>
+                <li>Donec eget orcimolestie,consequat turpis at,venenatis lacus."</li>
+                <li>Donecviverra purus at porttitor scelerisque.</li>
+                <li>Ut imperdiet lectus vitae massa vulputate dictum.</li>
+                <li>Etiam aliquet duiid lacus mollis pellentesque.</li><br>
+                <li>eras non odio placerat,suscipit ex non,hendrerit lacus."</li>
+                <li>Pellentesque volutpat risus eget leo iaculis imperdiet.</li><br>
+                <li>Morbieu dolor suscipit,rutrum quam quis,finibus nisi."</li>
+                <li>Sed ultricies duieget rutrum tincidunt.</li>
+                <li>Aenean laoreet felis at diam auctor,eget scelerisque lorem cursus."</li>
+                <li>Nullam interdum duiac mauris gravida imperdiet.</li>
+            </ul>
+            <br><br>
+        </div>
+       
     </body>
 </html>
