--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                 Excepteur sint occaecat cupidatat non proident,sunt in culpa quioff icia deserunt moliit anim id est laborum.
             </p><br>
         
-        <div>
+        <div style="display:block">
             <ul style="font-size: 90%; padding-inline-start: 15px;">
                 <li>Lorem ipsum dolor sit amet,consectetur adipiscing elit.</li><br>
                 <li>Donec eget orcimolestie,consequat turpis at,venenatis lacus.</li>
